@@ -3,8 +3,8 @@ import numpy as np
 from PIL import Image, ImageDraw
 
 from .common import ZOOM_4X, ZOOM_2X, ZOOM_NORMAL
-from .colour import to_spectra, PALETTE
-from .sprites import ImageSprite, convert_image, PaletteRemap, find_best_color
+from .colour import to_spectra, PALETTE, srgb_find_best_colour
+from .sprites import ImageSprite, convert_image, PaletteRemap
 
 
 VOX_SIDE_RIGHT, VOX_SIDE_BOTTOM = 0x100, 0x200
@@ -42,7 +42,7 @@ class VoxReader:
         vox_palette.shape = (256, 4)
         self.vox_palette = vox_palette
         self.palette = [to_spectra(r, g, b) for r, g, b, _ in vox_palette]
-        self.ttd_palette = [find_best_color(c) for c in self.palette]
+        self.ttd_palette = [srgb_find_best_colour(c) for c in self.palette]
 
     def read(self):
         with open(self.path, 'rb') as f:
